[package]
name = "break-check"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
prost = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0"
tonic-prost = "0.14"
redis = { version = "0.32", features = ["tokio-comp"] }
thiserror = "2.0"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
rstest = "0.26"
mockall = "0.14"
proptest = "1.9.0"

[build-dependencies]
tonic-prost-build = "0.14"
