[package]
name = "break-check"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
prost = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic-prost = "0.14"
redis = { version = "0.32", features = ["connection-manager", "tokio-comp"] }
thiserror = "2.0"
async-trait = "0.1"
log = "0.4"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.1"
tokio-stream = "0.1"

[dev-dependencies]
rstest = "0.26"
mockall = "0.14"
proptest = "1.9.0"
tokio-stream = { version = "0.1", features = ["net"] }
uuid = { version = "1.18", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
